--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
 rootProject.name = 'Client-server-chat-room'
-
+include('client')
+findProject(':client')?.name = 'client'
+include('server')
+findProject(':server')?.name = 'server'
+include('common')
+findProject(':common')?.name = 'common'
